<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gudi_orange"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gudi_orange"
        android:gravity="center"
        android:orientation="vertical">
    <EditText
        android:id="@+id/edit_name"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_username"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:hint="@string/hint_user_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_location"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:hint="@string/hint_lacation"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_password"
        style="@style/edit_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button_style"
        android:layout_marginTop="@dimen/size_40dp"
        android:layout_width="match_parent"
        android:text="@string/action_sign_in_short"
        android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>

</LinearLayout>